# scp_rs

./: .gitignore  detailed_design.md
ssh_cli/: Cargo.toml  README.md
ssh_cli/src/: app.rs  main.rs  model.rs  ssh.rs
